--- a/default.html
+++ b/default.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium CHOICE Series</title>
 
-  <link rel="stylesheet" href="styles/product-section.css">
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/infoSection.css">
+  <link rel="stylesheet" href="..styles/product-section.css">
+  <link rel="stylesheet" href="..styles/main.css">
+  <link rel="stylesheet" href="..styles/infoSection.css">
  
 
 </head>
@@ -31,7 +31,7 @@
           <div class="page-width">
             <div  class="inner">
                 <div class="inner-item">
-                  <a href="./models/pc.html">
+                  <a href="../models/pc.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="/assest/icons/pc80xp.png" alt=""></div>
                       <p class="btn btn-small">AC Motor Models</p>
@@ -39,7 +39,7 @@
                   </a>
                 </div>
                 <div  class="inner-item">
-                  <a href="https://www.premiumchoiceseries.com/models/pcd.html">
+                  <a href="../models/pcd.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="https://www.premiumchoiceseries.com/images/product/photo/PCD80XHP.webp" alt=""></div>
                       <p class="btn btn-small">DC Motor Models</p>
@@ -47,7 +47,7 @@
                   </a>
                 </div>
                 <div  class="inner-item">
-                  <a href="https://www.premiumchoiceseries.com/models/pcv.html">
+                  <a href="../models/pcv.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="/assest/icons/pcv80.png" alt=""></div>
                       <p class="btn btn-small">Value Models</p>
@@ -55,7 +55,7 @@
                   </a>
                 </div>
                 <div  class="inner-item">
-                  <a href="https://www.premiumchoiceseries.com/models/pclp.html">
+                  <a href="../models/pclp.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="https://www.premiumchoiceseries.com/images/product/photo/pclp2.png" alt=""></div>
                       <p class="btn btn-small">Low Profile Models</p>
@@ -70,25 +70,25 @@
 
     <div class="icon-grid-container">
       <div class="icon-grid-item">
-        <img src="assest/icons/energy-star.png" alt="Icon 1">
+        <img src="..assest/icons/energy-star.png" alt="Icon 1">
       </div>
       <div class="icon-grid-item">
-        <img src="assest/icons/hvi.png" alt="Icon 2">
+        <img src="..assest/icons/hvi.png" alt="Icon 2">
       </div>
       <div class="icon-grid-item">
-        <img src="assest/icons/title-24.png" alt="Icon 3">
+        <img src="..assest/icons/title-24.png" alt="Icon 3">
       </div>
       <div class="icon-grid-item"> 
-        <img src="assest/icons/ul.png" alt="Icon 4">
+        <img src="..assest/icons/ul.png" alt="Icon 4">
       </div>
       <div class="icon-grid-item">
-        <img src="assest/icons/cetlus.png" alt="Icon 5">
+        <img src="..assest/icons/cetlus.png" alt="Icon 5">
       </div>
       <div class="icon-grid-item">
-        <img src="assest/icons/amca-air-sound.png" alt="Icon 6">
+        <img src="..assest/icons/amca-air-sound.png" alt="Icon 6">
       </div>
       <div class="icon-grid-item">
-        <img src="assest/icons/cal-green.png" alt="Icon 7">
+        <img src="..assest/icons/cal-green.png" alt="Icon 7">
       </div>
     </div>
 
@@ -132,11 +132,11 @@
 
     <footer-component></footer-component>
 
-  <script src="components/footer.js"></script>
-   <script src="/components/navigation.js"></script> 
-   <script src="/components/heroSliders.js"></script>
-   <script src="/components/homepageProductGrid.js"></script>
-   <script src="/scripts/pcScripts.js"></script>
+  <script src="../components/footer.js"></script>
+   <script src="../components/navigation.js"></script> 
+   <script src="../components/heroSliders.js"></script>
+   <script src="../components/homepageProductGrid.js"></script>
+   <script src="../scripts/pcScripts.js"></script>
 
 
 </body>
