--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium CHOICE Series</title>
 
-  <link rel="stylesheet" href="..styles/product-section.css">
-  <link rel="stylesheet" href="..styles/main.css">
-  <link rel="stylesheet" href="..styles/infoSection.css">
+  <link rel="stylesheet" href=".styles/product-section.css">
+  <link rel="stylesheet" href=".styles/main.css">
+  <link rel="stylesheet" href=".styles/infoSection.css">
  
 
 </head>
@@ -33,7 +33,7 @@
                 <div class="inner-item">
                   <a href="../models/pc.html">
                     <div class="img img-zoom">
-                      <div class="img-wrap"><img class="drop-shadow-img" src="/assest/icons/pc80xp.png" alt=""></div>
+                      <div class="img-wrap"><img class="drop-shadow-img" src="./assest/icons/pc80xp.png" alt=""></div>
                       <p class="btn btn-small">AC Motor Models</p>
                     </div>
                   </a>
@@ -49,7 +49,7 @@
                 <div  class="inner-item">
                   <a href="../models/pcv.html">
                     <div class="img img-zoom">
-                      <div class="img-wrap"><img class="drop-shadow-img" src="/assest/icons/pcv80.png" alt=""></div>
+                      <div class="img-wrap"><img class="drop-shadow-img" src="./assest/icons/pcv80.png" alt=""></div>
                       <p class="btn btn-small">Value Models</p>
                     </div>
                   </a>
@@ -70,25 +70,25 @@
 
     <div class="icon-grid-container">
       <div class="icon-grid-item">
-        <img src="..assest/icons/energy-star.png" alt="Icon 1">
+        <img src=".assest/icons/energy-star.png" alt="Icon 1">
       </div>
       <div class="icon-grid-item">
-        <img src="..assest/icons/hvi.png" alt="Icon 2">
+        <img src=".assest/icons/hvi.png" alt="Icon 2">
       </div>
       <div class="icon-grid-item">
-        <img src="..assest/icons/title-24.png" alt="Icon 3">
+        <img src=".assest/icons/title-24.png" alt="Icon 3">
       </div>
       <div class="icon-grid-item"> 
-        <img src="..assest/icons/ul.png" alt="Icon 4">
+        <img src=".assest/icons/ul.png" alt="Icon 4">
       </div>
       <div class="icon-grid-item">
-        <img src="..assest/icons/cetlus.png" alt="Icon 5">
+        <img src=".assest/icons/cetlus.png" alt="Icon 5">
       </div>
       <div class="icon-grid-item">
-        <img src="..assest/icons/amca-air-sound.png" alt="Icon 6">
+        <img src=".assest/icons/amca-air-sound.png" alt="Icon 6">
       </div>
       <div class="icon-grid-item">
-        <img src="..assest/icons/cal-green.png" alt="Icon 7">
+        <img src=".assest/icons/cal-green.png" alt="Icon 7">
       </div>
     </div>
 
@@ -117,7 +117,7 @@
 
 
      <!--<div class="auto-flow-graph">
-      <img id="auto-flow" src="/assest/icons/auto.webp" alt="">
+      <img id="auto-flow" src="./assest/icons/auto.webp" alt="">
     </div>-->
 
       
@@ -132,11 +132,11 @@
 
     <footer-component></footer-component>
 
-  <script src="../components/footer.js"></script>
-   <script src="../components/navigation.js"></script> 
-   <script src="../components/heroSliders.js"></script>
-   <script src="../components/homepageProductGrid.js"></script>
-   <script src="../scripts/pcScripts.js"></script>
+  <script src="./components/footer.js"></script>
+   <script src="./components/navigation.js"></script> 
+   <script src="./components/heroSliders.js"></script>
+   <script src="./components/homepageProductGrid.js"></script>
+   <script src="./scripts/pcScripts.js"></script>
 
 
 </body>
