--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium CHOICE Series</title>
 
-  <link rel="stylesheet" href=".styles/product-section.css">
-  <link rel="stylesheet" href=".styles/main.css">
-  <link rel="stylesheet" href=".styles/infoSection.css">
+  <link rel="stylesheet" href="../styles/product-section.css">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/infoSection.css">
  
 
 </head>
