--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="page-width">
             <div  class="inner">
                 <div class="inner-item">
-                  <a href="../models/pc.html">
+                  <a href="./models/pc.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="./assest/icons/pc80xp.png" alt=""></div>
                       <p class="btn btn-small">AC Motor Models</p>
@@ -39,7 +39,7 @@
                   </a>
                 </div>
                 <div  class="inner-item">
-                  <a href="../models/pcd.html">
+                  <a href="./models/pcd.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="https://www.premiumchoiceseries.com/images/product/photo/PCD80XHP.webp" alt=""></div>
                       <p class="btn btn-small">DC Motor Models</p>
@@ -47,7 +47,7 @@
                   </a>
                 </div>
                 <div  class="inner-item">
-                  <a href="../models/pcv.html">
+                  <a href="./models/pcv.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="./assest/icons/pcv80.png" alt=""></div>
                       <p class="btn btn-small">Value Models</p>
@@ -55,7 +55,7 @@
                   </a>
                 </div>
                 <div  class="inner-item">
-                  <a href="../models/pclp.html">
+                  <a href="./models/pclp.html">
                     <div class="img img-zoom">
                       <div class="img-wrap"><img class="drop-shadow-img" src="https://www.premiumchoiceseries.com/images/product/photo/pclp2.png" alt=""></div>
                       <p class="btn btn-small">Low Profile Models</p>
@@ -70,25 +70,25 @@
 
     <div class="icon-grid-container">
       <div class="icon-grid-item">
-        <img src=".assest/icons/energy-star.png" alt="Icon 1">
+        <img src="./assest/icons/energy-star.png" alt="Icon 1">
       </div>
       <div class="icon-grid-item">
-        <img src=".assest/icons/hvi.png" alt="Icon 2">
+        <img src="./assest/icons/hvi.png" alt="Icon 2">
       </div>
       <div class="icon-grid-item">
-        <img src=".assest/icons/title-24.png" alt="Icon 3">
+        <img src="./assest/icons/title-24.png" alt="Icon 3">
       </div>
       <div class="icon-grid-item"> 
-        <img src=".assest/icons/ul.png" alt="Icon 4">
+        <img src="./assest/icons/ul.png" alt="Icon 4">
       </div>
       <div class="icon-grid-item">
-        <img src=".assest/icons/cetlus.png" alt="Icon 5">
+        <img src="./assest/icons/cetlus.png" alt="Icon 5">
       </div>
       <div class="icon-grid-item">
-        <img src=".assest/icons/amca-air-sound.png" alt="Icon 6">
+        <img src="./assest/icons/amca-air-sound.png" alt="Icon 6">
       </div>
       <div class="icon-grid-item">
-        <img src=".assest/icons/cal-green.png" alt="Icon 7">
+        <img src="./assest/icons/cal-green.png" alt="Icon 7">
       </div>
     </div>
 
@@ -103,13 +103,13 @@
               <button id="cta-button-iaq" class="btn-cta-iaq">Learn More</button>
             </div>
             <!--<div class="info-section-right">
-              <div class="img-right-one"><img src="assest/icons/health-stats.jpg" alt=""></div>
-              <div class="img-right-two"><img src="assest/icons/indoor-stats.jpg" alt=""></div>
+              <div class="img-right-one"><img src="./assest/icons/health-stats.jpg" alt=""></div>
+              <div class="img-right-two"><img src="./assest/icons/indoor-stats.jpg" alt=""></div>
              <div class="responsive-container">
               <div class="img-right-one-responsive"><img src="assest/icons/health-stats.jpg" alt=""></div>
               <div class="img-right-two-responsive"><img src="assest/icons/indoor-stats.jpg" alt=""></div>
             </div>
-              <div class="img-right-three"><img src="assest/icons/outside-stats.jpg" alt=""></div>-->
+              <div class="img-right-three"><img src="./assest/icons/outside-stats.jpg" alt=""></div>-->
               <button id="responsive-cta-button-iaq" class="btn-cta-iaq-responsive">Learn More</button>
            
       </div>
